--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <form id="form" class="container">
     <div class="input-group my-3">
       <input type="text" id="input" class="form-control" placeholder="Add todo">
-      <button class="buttn">ADD</button>
+      <button class="buttn buttn-add">ADD</button>
     </div>
   </form>
   <div class="container">
